--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <resetassured.version>3.0.3</resetassured.version>
         <jackson.version>2.8.8</jackson.version>
         <lombok.version>1.16.8</lombok.version>
+        <awaitility.version>1.7.0</awaitility.version>
     </properties>
 
     <dependencies>
@@ -46,6 +47,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
